--- a/login.html
+++ b/login.html
@@ -4,12 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/login.css">
     <title>Login</title>
 </head>
 <body>
      <div class="login-wraper">
-         <form action=""></form>
+         <form action="" class="form">
+            <!-- <img src="./img/login-avatar.png" alt=""> -->
+            <h2>Login</h2>
+            <div class="input-group">
+                <input type="text" name="login-user" id="login-user">
+                <label for="login-user">User Name</label>
+            </div>
+            <div class="input-group">
+                <input type="password" name="login-password" id="login-password">
+                <label for="login-password">Password</label>
+            </div>
+            <input type="submit" value="login" class="submit-btn">
+            <a href="#forgot-password" class="forgot-password">Esqueceu a senha?</a>
+            
+         </form>
+
+         <div id="forgot-password">
+             <form action="" class="form">
+                 <a href="#" class="close">&times;</a>
+                 <h2>Reset Password</h2>
+                 <div class="input-group">
+                    <input type="email" name="email" id="email">
+                    <label for="email">Email</label>
+                </div>
+                <input type="submit" value="submit" class="submit-btn">
+             </form>
+         </div>
      </div>
     
 </body>
