--- a/login.html
+++ b/login.html
@@ -8,9 +8,9 @@
     <title>Login</title>
 </head>
 <body>
-     <div class="login-wraper">
+     <div class="login-wrapper">
          <form action="" class="form">
-            <!-- <img src="./img/login-avatar.png" alt=""> -->
+            <img src="./img/login-avatar.png" alt="">
             <h2>Login</h2>
             <div class="input-group">
                 <input type="text" name="login-user" id="login-user">
